<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_blue_home"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/yay"
            android:textColor="@color/white"
            android:textSize="22sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/region_stars"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            >
            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_white_09"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/region_moves_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="● "
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moves_limit"
                        android:textColor="@color/lemon_grass"
                        android:textSize="18sp"
                        android:typeface="monospace"/>
                    <TextView
                        android:id="@+id/tvChallengeLimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/lemon_grass"
                        android:textSize="18sp"
                        android:typeface="monospace"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/region_moves_made"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="● "
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moves_made"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:typeface="monospace"/>
                    <TextView
                        android:id="@+id/tvMoves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:typeface="monospace"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/region_two_player_result_row_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="● "
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_win"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:typeface="monospace"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            >
            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_white_09"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="● "
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Score : "
                        android:textColor="@color/white"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/tvScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/tvGameNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end|center"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:text=""
                        android:textColor="#FECE00"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="● "
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Top Score : "
                        android:textColor="#FAFFFF00"
                        android:textSize="19sp"/>
                    <TextView
                        android:id="@+id/tvTopScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#FAFFFF00"
                        android:textSize="19sp"/>
                </LinearLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">
                    <RelativeLayout
                        android:id="@+id/tv_share"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/btn_white_09_rectangle"
                        android:clickable="true"
                        tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/tvShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:clickable="true"
                            android:gravity="center"
                            android:text="Share"
                            android:textColor="#FECE00"
                            android:textSize="17sp"/>
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/btn_store"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/btn_white_09_rectangle"
                        android:clickable="true"
                        tools:ignore="UselessParent">
                        <TextView
                            android:id="@+id/btnStore"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/btn_store"
                            android:clickable="true"/>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp">
            <TextView
                android:id="@+id/btnRestart"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_white_09_rectangle"
                android:gravity="center"
                android:text="@string/restart"
                android:textColor="@color/white"
                />

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1.4"
            android:background="@drawable/btn_rectangle_sky_blue"
            android:clickable="true"
            android:gravity="center"
            android:text="Next board"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/btnGameSummary"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white_09_rectangle"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/summary"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout> 